# encommerce_tests_sync

./: config.py  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
clients/: base_client.py  event_hooks.py
data/: __init__.py
data/auth_cases/: user_register_cases.py
services/: __init__.py
services/auth/: auth.py  endpoints.py
services/auth/models/: register.py
tests/api_tests/: auth_tests.py
utils/: generators.py  helper.py
